Merged revisions 888159 via svnmerge from https://svn.apache.org/repos/asf/cxf/trunk
........
  r888159 | dkulp | 2009-12-07 17:20:55 -0500 (Mon, 07 Dec 2009) | 2 lines
  
  [CXF-2571] Set systemId on the dom things for xjc
  Workaround bug in xjc not resolving jar: urls
........


git-svn-id: https://svn.apache.org/repos/asf/cxf/branches/2.2.x-fixes@888161 13f79535-47bb-0310-9956-ffa450edef68